--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 carpentry: "incubator"
 
 # Overall title for pages.
-title: "DUNE Computing Training January 2023 edition" # FIXME
+title: "DUNE Computing Training Jan. 2023 edition MOCKUP" # FIXME
 
 # Life cycle stage of the lesson
 # See this page for more details: https://cdh.carpentries.org/the-lesson-life-cycle.html
@@ -58,7 +58,7 @@ instructor_post_survey: "https://www.surveymonkey.com/r/instructor_training_post
 
 
 # Start time in minutes (0 to be clock-independent, 540 to show a start at 09:00 am).
-start_time: 0
+start_time: 480
 
 # Specify that things in the episodes collection should be output.
 collections:
@@ -98,7 +98,6 @@ exclude:
 
 # Turn on built-in syntax highlighting.
 highlighter: rouge
-
 
 # Remote theme
 remote_theme: carpentries/carpentries-theme
